refactor: S3ImageService 수정